fix(header-notification): add visible hover state and class name to clear button

--- a/src/components/Header/HeaderNotification/_mixins.scss
+++ b/src/components/Header/HeaderNotification/_mixins.scss
@@ -94,6 +94,13 @@
       transform: translate3d(0, 0, 0);
       opacity: 1;
     }
+
+    &--clear:active,
+    &--clear:focus,
+    &--clear:hover {
+      cursor: pointer;
+      background-color: $active-tertiary;
+    }
   }
 
   &__transition {
